# counter-uas-simulation

./: .gitignore  AGENTS.md  ARCHITECTURE_MAP.md  README.md  fix_rosbridge.sh  test_system.py
docs/: CREDIBILITY_REALISM_TECHNICAL_REVIEW.md  (+4 more)
src/counter_uas/: package.xml  setup.cfg  setup.py
src/counter_uas/config/: config.yaml  config_gazebo_counter_uas.yaml  config_lab_toy.yaml
src/counter_uas/counter_uas/: __init__.py  lifecycle_observer_node.py
src/counter_uas/launch/: bringup.launch.py
src/counter_uas/test/: test_accel_limit_ramp.py  test_ambiguity_failure_taxonomy.py  test_ambiguity_sweep_profiles.py  test_analyze_run_parse.py  test_autopilot_model.py  test_classify_run.py  test_default_bringup_config.py  test_evaluation_row.py  test_failure_taxonomy.py  test_fusion_pair_up.py  test_guidance_kernel_snapshots.py  test_guidance_lib.py  test_heatmap_agreement.py  test_intercept_solver_golden.py  test_interception_pause_timer.py  test_kinematic_plant.py  test_layer_b_realism_contracts.py  test_lifecycle_observer_support.py  test_monte_carlo.py  test_noisy_measurement_realism_contracts.py  test_noisy_measurement_wave1_helpers.py  test_realism_failure_taxonomy.py  test_realism_metrics.py  test_replay_observability.py  test_replay_static_visualization.py  test_selection_audit.py  test_selection_oracle_divergence_taxonomy.py  test_statistical_validation.py  test_stats_helpers.py  test_tactical_observability_parse.py  test_tracking_candidate_gate.py  test_triage_engagement_script.py  test_wave3_topology_support.py  test_wave4_evaluation_integration.py
src/gazebo_target_sim/: package.xml  setup.cfg  setup.py  test_target_controller_reset.py
src/gazebo_target_sim/gazebo_target_sim/: clock_reset.py  dynamic_pose_to_drone_point_node.py  guidance_kernel.py  guidance_lib.py  gz_entity_tools.py  gz_pose_tools.py  hit_contact_corroborator_node.py  interception_logic_node.py  interceptor_controller_node.py  kinematic_plant.py  noisy_measurement_node.py  target_controller_node.py
src/gazebo_target_sim/gui/: cuas_gz_gui.config
src/gazebo_target_sim/launch/: gazebo_target.launch.py  gazebo_target_multi.launch.py
src/gazebo_target_sim/rviz/: hit_overlay.rviz
(+161 files in other folders)
