<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>counter_uas</name>
  <version>0.0.1</version>
  <description>Launch bringup for the counter-UAS simulation stack.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>gazebo_target_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>world_sim</exec_depend>
  <exec_depend>radar_sim</exec_depend>
  <exec_depend>camera_sim</exec_depend>
  <exec_depend>fusion</exec_depend>
  <exec_depend>tracking</exec_depend>
  <exec_depend>threat_assessment</exec_depend>
  <exec_depend>visualization</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
